--- a/src/app/admin/adminlogin/adminlogin.component.html
+++ b/src/app/admin/adminlogin/adminlogin.component.html
@@ -1,16 +1,16 @@
 
 <div class="card col-lg-4 offset-lg-4 mt-5">
     <div class="card-body m-3">
-  <form [formGroup]="loginGroup">
-  <h3 style="text-align: center;">Login </h3>
+  <form [formGroup]="aloginGroup">
+  <h3 style="text-align: center;">Admin Login </h3>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" name="email" placeholder="Enter your email" ngModel formControlName="email">
+      <input type="email" class="form-control" name="email" placeholder="Enter your email" ngModel formControlName="aemail">
      <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="Enter your Password" ngModel formControlName="password">
+      <input type="password" class="form-control" name="password" placeholder="Enter your Password" ngModel formControlName="apassword">
     </div>
     <span *ngIf="error" style="color:red;">Email and password is incorrect</span><br>
     <a href=""><u>Forgot password</u></a>
