--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <img src="assets/bgg2.jpg" class="d-block w-100" style="height: 450px;"alt="...">
       </div>
       <div class="carousel-item" data-interval="2000">
-        <img src="assets/bg4.jpeg" class="d-block w-100" style="height: 450px;"alt="...">
+        <img src="assets/slide2.jpg" class="d-block w-100" style="height: 450px;"alt="...">
       </div>
       <div class="carousel-item">
         <img src="assets/bgg4.jpg" class="d-block w-100" style="height: 450px;"alt="...">
