--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="card col-lg-4 offset-lg-4 mt-5">
     <div class="card-body m-3">
   <form [formGroup]="loginGroup">
-  <h3 style="text-align: center;">Login </h3>
+  <h3 style="text-align: center;">User Login </h3>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control" name="email" placeholder="Enter your email" ngModel formControlName="email">
