--- a/src/app/admin/adminhome/adminhome.component.html
+++ b/src/app/admin/adminhome/adminhome.component.html
@@ -1,1 +1,111 @@
-<p>adminhome works!</p>
+<body>
+<!-- <div class="borrowtable">
+    <i class="fa fa-user fa-fw icon" aria-hidden="true"></i>
+    <span>Borrow Table<span>
+</div> -->
+<nav class="nav">
+    <a class="nav-link active" href="#">All</a>
+    <a class="nav-link" href="#">New Books</a>
+    <a class="nav-link" href="#">Old Books</a>
+    <a class="nav-link" href="#">Lost Books</a>
+    <a class="nav-link" href="#">Damage Books</a>
+    <a class="nav-link" href="#">Subject For Replacement</a>
+    <a class="nav-link" style="margin-left: 200px;" routerLink="home">logout</a>
+</nav>
+<div class="btnplus">
+    <button type="button" class="btn " id="plus">
+        <span class="badge badge-light">+</span> Add Books
+    </button>
+    <button type="button" class="btn " id="print">
+        <span class="badge badge-light"><i class="fa fa-print icon1" aria-hidden="true"></i></span> Print
+    </button>
+</div>
+<div class="drpdwn">
+    <form>
+        <input type="number" min="1" max="100" value="1" class="numberdrpdwn">
+        <span class="drpdwntxt">records per page</span>
+        <input type="text" placeholder="Search...." class="search">
+    </form>
+</div>
+<table class="table table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">ACC NO.</th>
+        <th scope="col">BOOK TITLE</th>
+        <th scope="col">CATEGORY</th>
+        <th scope="col">AUTHOR</th>
+        <th scope="col">COPIES</th>
+        <th scope="col">BOOK PUB</th>
+        <th scope="col">PUBLISHER NAME</th>
+        <th scope="col">ISBN</th>
+        <th scope="col">COPYRIGHT YEAR</th>
+        <th scope="col">DATE ADDED</th>
+        <th scope="col">STATUS</th>
+        <th scope="col">ACTION</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>15</td>
+        <td>Natural Resources</td>
+        <td>Microbiology</td>
+        <td>Robin Kerrod</td>
+        <td>14</td>
+        <td>Marshall Cavendish Corporation</td>
+        <td>Marshall</td>
+        <td>1-85435-628-3</td>
+        <td>1997</td>
+        <td>2013-12-11</td>
+        <td>Old</td>
+        <td><button class="btn"><i class="fa fa-trash delete"></i></button>
+            <button class="btn"><i class="fa fa-edit edit"></i></button></td>
+      </tr>
+      <tr>
+        <td>17</td>
+        <td>Introduction to Microbiology</td>
+        <td>Microbiology</td>
+        <td>Caralyn Bradshaw, Michael Seals</td>
+        <td>35</td>
+        <td>Pearson Education.Inc</td>
+        <td>Prentice Hall, New Jersey</td>
+        <td>0-13-125087-6</td>
+        <td>2014</td>
+        <td>2013-12-11</td>
+        <td>New</td>
+        <td><button class="btn"><i class="fa fa-trash delete"></i></button>
+            <button class="btn"><i class="fa fa-edit edit"></i></button></td>
+      </tr>
+      <tr>
+        <td>18</td>
+        <td>Logical Reasoning and concepts</td>
+        <td>Psycology</td>
+        <td>..</td>
+        <td>3</td>
+        <td>Pasay City</td>
+        <td>..</td>
+        <td>..</td>
+        <td>2013</td>
+        <td>2013-12-11</td>
+        <td>New</td>
+       <td><button class="btn"><i class="fa fa-trash delete"></i></button>
+            <button class="btn"><i class="fa fa-edit edit"></i></button></td>
+      </tr>
+      <tr>
+        <td>19</td>
+        <td>Projectile</td>
+        <td>Physics</td>
+        <td>Brain</td>
+        <td>25</td>
+        <td>Regrncy</td>
+        <td>Prentice Hall</td>
+        <td>0-13-05084-1</td>
+        <td>1996</td>
+        <td>2013-12-11</td>
+        <td>Old</td>
+        <td><button class="btn"><i class="fa fa-trash delete"></i></button>
+            <button class="btn"><i class="fa fa-edit edit"></i></button></td>
+      </tr>
+    </tbody>
+  </table>
+
+</body>
