--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav *ngIf="nav.visible" class="navbar navbar-expand-lg navbar-light bg-dark">
         
       
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto" >
+        <li class="nav-item active" style="margin-right: 30px;" id="mySidenav" class="sidenav">
+          <a class="nav-link"   ><b>Library Management System</b></a>
+      </li>
         <li class="nav-item active" style="margin-right: 30px;">
             <a class="nav-link" routerLink="home" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
         </li>
@@ -17,7 +20,7 @@
         <li class="nav-item " style="margin-right: 30px;">
             <a class="nav-link" routerLink="about" style="color: white;"><i class="fa fa-info-circle" ></i> ABOUT</a>
         </li>
-        <li class="nav-item dropdown "style="margin-right: 600px;">
+        <li class="nav-item dropdown "style="margin-right: 500px;">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"style="color: white;">
                 <i class="fa fa-book" ></i> SECTION
             </a>
