--- a/src/app/admin/addcustomers/addcustomers.component.html
+++ b/src/app/admin/addcustomers/addcustomers.component.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="adminlogin" style="color: white;"><h4><i class="fa fa-sign-out">Logout </i></h4></a>
+                <a class="nav-link" (click)="home()" style="color: white;"><h4><i class="fa fa-sign-out">Logout </i></h4></a>
             </li>
             
         </ul>
