--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -13,7 +13,7 @@
 </nav>
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="#news">My Transactions</a>
+    <a (click)="mytransaction()">My Transactions</a>
     <a href="#contact">Send/Receive</a>
     <a href="#about">Transfer Funds</a>
     <a href="#about">ATM Simulator</a>
