--- a/src/app/admin/adminhome/adminhome.component.html
+++ b/src/app/admin/adminhome/adminhome.component.html
@@ -16,16 +16,16 @@
         <a class="nav-link" routerLink='/users' style="color: white;"><i class="fa fa-fw fa-user-o"></i> USERS</a>
       </li>
       <li class="nav-item " style="margin-right: 20px;">
-        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-info-circle"></i> TRANSACTION</a>
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-file"></i> TRANSACTION</a>
       </li>
       <li class="nav-item " style="margin-right: 20px;">
         <a class="nav-link" routerLink='/addbooks' style="color: white;"><i class="fa fa-book"></i> BOOKS</a>
       </li>
       <li class="nav-item " style="margin-right: 20px;">
-        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-book"></i> MEMBER</a>
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-users"></i> MEMBER</a>
       </li>
       <li class="nav-item " style="margin-right: 20px;">
-        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-book"></i> ARCHIVE</a>
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-archive"></i> ARCHIVE</a>
       </li>
       <li class="nav-item " style="margin-right: 20px;">
         <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-search" aria-hidden="true"></i>ADVANCE
