--- a/src/app/admin/addbooks/addbooks.component.html
+++ b/src/app/admin/addbooks/addbooks.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<body>
 <nav *ngIf="adminnav.avisible" class="navbar navbar-expand-lg navbar-light bg-dark">
 
 
@@ -45,13 +45,13 @@
 </nav>
 
 
-<body>
+
     <!-- <div class="borrowtable">
         <i class="fa fa-user fa-fw icon" aria-hidden="true"></i>
         <span>Borrow Table<span>
     </div> -->
     <div class="borrowtable">
-      <a class="fa fa-user fa-fw icon" >BorrowTable</a>
+      <a class="fa fa-user fa-fw icon" >BooksTable</a>
     </div>
     <nav class="nav">
         <a class="nav-link active" href="#">All</a>
