--- a/src/app/user/userhome/userhome.component.html
+++ b/src/app/user/userhome/userhome.component.html
@@ -1,1 +1,103 @@
-<p>userhome works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body>
+<nav  class="navbar navbar-expand-lg navbar-light bg-dark">
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active" style="margin-right: 20px;" id="mySidenav" class="sidenav">
+        <a class="nav-link"><b>Library Management System</b></a>
+      </li>
+      <li class="nav-item active" style="margin-right: 20px;">
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
+      </li>
+
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink='/users' style="color: white;"><i class="fa fa-fw fa-user-o"></i> USERS</a>
+      </li>
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-file"></i> TRANSACTION</a>
+      </li>
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink='/addbooks' style="color: white;"><i class="fa fa-book"></i> BOOKS</a>
+      </li>
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-users"></i> MEMBER</a>
+      </li>
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-archive"></i> ARCHIVE</a>
+      </li>
+      <li class="nav-item " style="margin-right: 20px;">
+        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-search" aria-hidden="true"></i>ADVANCE
+          SEARCH</a>
+      </li>
+      <li class="nav-item " style="margin-right: 50px;">
+        <a class="nav-link" routerLink='/home' style="color: white;"><i class="fa fa-sign-out"
+            aria-hidden="true"></i>LOGOUT</a>
+      </li>
+      <li class="nav-item " style="float: right;">
+        <a class="nav-link" href="#" style="color:brown;"><b>WELCOME: LIBRARIAN</b></a>
+      </li>
+
+    </ul>
+
+  </div>
+</nav>
+
+<div class="borrowtable">
+  <a class="fa fa-user fa-fw icon" >BorrowTable</a>
+</div>
+<div class="sidebar">
+  <div class="form-group">
+    <label for="">Borrow table :</label>
+    <select class="form-control" name="" id="">
+      <option> Select an Option</option>
+      <option></option>
+      <option></option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="">Due Date:</label>
+    <input type="date" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+    
+</div>
+<button type="button" class="btn " id="plus">
+  <span class="badge badge-dark">+</span> Borrow
+</button>
+</div>
+<div class="content">
+  <h4 id="selectbook">Select Book</h4>
+  <form class="form-inline">
+    
+    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+      <option selected>Choose...</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+    <label class="my-1 mr-2 " for="inlineFormCustomSelectPref">Records per page</label>
+    <div class="form-group " style="margin-left: 500px;">
+      <label for="" > Search:</label>
+      <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+      
+    </div>
+
+      
+  </form>
+  <table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">ACC NO.</th>
+            <th scope="col">BOOK TITLE</th>
+            <th scope="col">CATEGORY</th>
+            <th scope="col">AUTHOR</th>
+            <th scope="col">PUBLISHER NAME</th>
+            <th scope="col">STATUS</th>
+            <th scope="col">ADD</th>
+        </tr>
+    </thead>
+  </table>
+ 
+</div>
+
+</body>
