--- a/src/app/admin/addbooks/addbooks.component.html
+++ b/src/app/admin/addbooks/addbooks.component.html
@@ -1,15 +1,19 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <body>
 <nav *ngIf="adminnav.avisible" class="navbar navbar-expand-lg navbar-light bg-dark">
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active" style="margin-right: 20px;" id="mySidenav" class="sidenav">
+      <li class="nav-item active" style="margin-right: 0px;" id="mySidenav" class="sidenav">
         <a class="nav-link"><b>Library Management System</b></a>
       </li>
+      <li class="nav-item active" style="margin-right: 5px;" >
+        <a class="nav-link" style="color: white;"><b>LMS</b></a>
+      </li>
       <li class="nav-item active" style="margin-right: 20px;">
-        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
+        <a class="nav-link" routerLink="/adminhome" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
       </li>
 
       <li class="nav-item " style="margin-right: 20px;">
