--- a/src/app/admin/adminhome/adminhome.component.html
+++ b/src/app/admin/adminhome/adminhome.component.html
@@ -5,11 +5,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active" style="margin-right: 20px;" id="mySidenav" class="sidenav">
+      <li class="nav-item active" style="margin-right: 0px;" id="mySidenav" class="sidenav">
         <a class="nav-link"><b>Library Management System</b></a>
       </li>
+      <li class="nav-item active" style="margin-right: 5px;" >
+        <a class="nav-link" style="color: white;"><b>LMS</b></a>
+      </li>
       <li class="nav-item active" style="margin-right: 20px;">
-        <a class="nav-link" routerLink="" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
+        <a class="nav-link" routerLink="/adminhome" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
       </li>
 
       <li class="nav-item " style="margin-right: 20px;">
