--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,12 @@
       
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto" >
-        <li class="nav-item active" style="margin-right: 30px;" id="mySidenav" class="sidenav">
-          <a class="nav-link"   ><b>Library Management System</b></a>
-      </li>
+        <li class="nav-item active" style="margin-right: 0px;" id="mySidenav" class="sidenav">
+          <a class="nav-link"><b>Library Management System</b></a>
+        </li>
+        <li class="nav-item active" style="margin-right: 5px;" >
+          <a class="nav-link" style="color: white;"><b>LMS</b></a>
+        </li>
         <li class="nav-item active" style="margin-right: 30px;">
             <a class="nav-link" routerLink="home" style="color: white;"><i class="fa fa-fw fa-home"></i> HOME</a>
         </li>
@@ -31,9 +34,16 @@
               
             </div>
           </li>
-          <li class="nav-item " style="float: right;">
-            <a class="nav-link" href="#" style="color: white;"><i class="fa fa-phone" ></i> CONTACT US</a>
-        </li>
+          <li class="nav-item dropdown " style="float: right;">
+            <a class="nav-link dropdown-toggle" routerLink="#" style="color: white; text-decoration: none;" id="navbarDropdow" data-toggle="dropdown" data-toggle="tooltip"aria-haspopup="true" aria-expanded="false"data-html="true" title="Address:Library Management system "><i class="fa fa-phone" ></i> CONTACT US</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdow">
+              <a class="dropdown-item" ><b>Address:</b>
+              <p>
+                Library Management System<br>
+                9642726909
+              </p></a>
+              </div>
+          </li>
        
       </ul>
       
